appId: ${APP_ID}
name: Complete a run and start fresh
tags:
  - ios
  - android
---
- runFlow: helpers/create-checklist.yaml
- tapOn: Start run
- assertVisible: 0 of 2 checked
- assertVisible:
    text: Complete the checklist
    enabled: false
- tapOn: .*Scenario first.*
- assertVisible: 1 of 2 checked
- assertVisible:
    text: Complete the checklist
    enabled: false
- tapOn: .*Scenario first.*
- assertVisible: 0 of 2 checked
- tapOn: .*Scenario first.*
- tapOn: .*Scenario second.*
- assertVisible: 2 of 2 checked
- assertVisible:
    text: Complete the checklist
    enabled: true
- tapOn: Complete the checklist
- assertVisible: Start run
- assertNotVisible: Are you sure\?
- assertVisible: .*Scenario first.*
- assertVisible: .*Scenario second.*
- tapOn: Start run
- assertVisible: 0 of 2 checked
- runFlow: helpers/discard-run.yaml
- runFlow: helpers/delete-checklist.yaml
